--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Mozifilmek</title>
 </head>
 <body>
-    
+    <h1>Mozifilmek</h1>
+    <table>
+        
+    </table>
 </body>
 </html>
