h1-es elem behúzva az oldal közepére

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Mozifilmek</title>
 </head>
 <body>
-    <h1>Mozifilmek</h1>
+    <h1 align="center">Mozifilmek</h1>
     <table>
         
     </table>
