be lett fejezve a html oldal

--- a/index.html
+++ b/index.html
@@ -6,8 +6,38 @@
 </head>
 <body>
     <h1 align="center">Mozifilmek</h1>
-    <table>
-        
+    <table border="1" align="center" width="80%">
+        <tr>
+            <td colspan="2" align="center">
+                <img src="hatter1.jpeg" alt="hatter" title="hatter">
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2" >
+                <h2 align="center">Jumanji</h2>
+            </td>
+        </tr>
+        <tr>
+            <td align="center">
+                <h3>Szereplők:</h3>
+                <ul>
+                    <li>Dwayne Johnson</li>
+                    <li>Karen Gillan</li>
+                    <li>Danny Devito</li>
+                    <li>Kevin Hart</li>
+                </ul>
+            </td>
+            <td align="center">
+                <img src="jumanji.jpeg" alt="jumanji" title="jumanji">
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <p>
+                    A játék amely beszippantja fantáziavilágába a játékosait, még működik. A régi barátok akaratuk ellenére visszakerülnek a következő pályára... de a felállás már egészen más, mint legutóbb. Miután Spencert beszippantja a program, három régi haverja természetesen kötelességének érzi, hogy megpróbálja kimenteni. Azt hiszik, az ismerős terepen könnyen boldogulnak majd, de nem számolnak vele, hogy néhány új játékos mindent megváltoztathat. Spencer nagyapja (Danny Devito) és annak nyugdíjas haverja (Danny Glover) is követi őket. Az avatárok (Dwayne Johnson, Jack Black, Kevin Hart és Karen Gillan) összekeverednek, a tétek nőnek, a dzsungel helyett behavazott hegyeken és forró sivatagban kell megoldaniuk a feladatot, ráadásul már a startvonalnál kiderül: ezúttal egy játékos nem kerülhet ki élve Jumanjiból...
+                </p>
+            </td>
+        </tr>
     </table>
 </body>
 </html>
